Working on poster...

--- a/8-poster/beamerthemeTUGraz.sty
+++ b/8-poster/beamerthemeTUGraz.sty
@@ -162,8 +162,9 @@
         \vskip4ex
         %\raggedleft
         \centering
-        \begin{CJK}{UTF8}{bsmi}
+        \begin{CJK}{UTF8}{bkai}
         \usebeamercolor{title in headline}{\color{fg}\textbf{\LARGE{\inserttitle}}\\[1ex]}
+        \vskip.35cm
         \usebeamercolor{author in headline}{\color{fg}\large{\insertauthor}\\[1ex]}
         \usebeamercolor{institute in headline}{\color{fg}\large{\insertinstitute}\\[1ex]}
         \end{CJK}
