--- a/8-poster/main.tex
+++ b/8-poster/main.tex
@@ -44,14 +44,12 @@
 \begin{block}{總體分佈}
 \begin{center}
 \begin{minipage}{0.43\textwidth}
-  \begin{center}
   \begin{figure}[!htbp]
   \centering
   \includegraphics[width=\columnwidth]{quantity_time_graph}
   \caption{貼文數量對時間的關係圖}
   \label{f1}
   \end{figure}
-  \end{center}
 \end{minipage}
 \quad
 \begin{minipage}{0.43\textwidth}
@@ -138,7 +136,7 @@
   \begin{table}[!htbp]
   \caption{依時間劃分（節錄）}
   \label{t3}
-  \begin{tabular}{@{}L{7.5cm}llllllllll@{}}
+  \begin{tabular}{@{}L{7.5cm}ll@{}}
   \toprule
   時間區間 & \#1 & \#3 \\
   \midrule
@@ -166,21 +164,37 @@
 \end{block}
 \end{minipage}
 
-\begin{minipage}{0.395\textwidth}
+\begin{minipage}{0.59\textwidth}
 \begin{block}{這是一串中文}
-圖 \ref{f1} 是貼文數量對時間的關係圖，橫軸為時間，以日為單位，縱軸為貼文數量，以篇為單位。%
-圖 \ref{f2} 是累計貼文數量對時間的關係圖，橫軸為時間，以日為單位，縱軸為累計貼文數量，以篇為單位。%
-從這兩張圖我們可以看出，隨著投票日的接近，各政黨／侯選人／意見領袖也愈來愈踴躍地在社群網站上發佈貼文。%
-選舉前幾天的貼文數量更達到其餘時間的兩倍以上。%
 
-    \begin{center}
-      在這裡輸入文字。
-    \end{center}
+  \begin{table}[!htbp]
+  \caption{貼文情感分析（節錄）}
+  \label{t5}
+  \begin{tabular}{@{}L{8.5cm}R{4.5cm}R{4.5cm}R{1.7cm}R{4.5cm}R{5.7cm}@{}}
+  \toprule
+  　\newline粉絲專頁名稱\newline　 & %
+  　\,01/10\newline\hspace*{1.25em}$\vert$\newline01/17 & %
+  　\,01/03\newline\hspace*{1.25em}$\vert$\newline01/10 & %
+  　\newline$\ldots$\newline　 & %
+  　\,10/17\newline\hspace*{1.25em}$\vert$\newline10/25 & %
+  　{\bfseries 　所有　　時間　　區間} \\
+  \midrule
+  朱立倫 & 1/30 & 1/18 & $\ldots$ & 1/5 & 10/210 \\
+  大安推范雲 & 2/35 & 0/27 & $\ldots$ & 1/13 & 14/239 \\
+  王丹网站 Wa\dots & 3/14 & 6/11 & $\ldots$ & 5/12 & 37/137 \\
+  國民黨青年團 & 1/4 & 0/4 & $\ldots$ & 0/0 & 4/51 \\
+  $\vdots$ & $\vdots$ & $\vdots$ & $\ddots$ & $\vdots$ & $\vdots$ \\
+  宋楚瑜 & 7/57 & 4/51 & $\ldots$ & 1/22 & 32/294 \\
+  特急件小周\dots & 19/25 & 13/20 & $\ldots$ & 4/6 & 99/142 \\
+  {\bfseries 所有粉絲專頁} & 509/2355 & 446/1868 & $\ldots$ & 336/1275 & 4827/18128 \\
+  \bottomrule
+  \end{tabular}
+  \end{table}
 
 \end{block}
 \end{minipage}
 \quad
-\begin{minipage}{0.585\textwidth}
+\begin{minipage}{0.39\textwidth}
 \begin{block}{不知道要打什麼}
   \begin{center}
     在這裡輸入文字。
