--- a/8-poster/beamerthemeTUGraz.sty
+++ b/8-poster/beamerthemeTUGraz.sty
@@ -21,7 +21,6 @@
 \def\logoright{\setbeamertemplate{logoright}}
 \def\insertlogoright{\usebeamertemplate*{logoright}}
 
-
 \definecolor{tugred}{rgb}{1.0,0.04,0.43}
 \definecolor{tugblue}{rgb}{0.31,0.51,0.74}
 \definecolor{tuggreen}{rgb}{0.61,0.73,0.35}
@@ -110,7 +109,6 @@
 
 % \setbeamertemplate{itemize items}[triangle]
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setbeamertemplate{block begin}{
   \vskip.75ex
@@ -189,38 +187,36 @@
   \end{beamercolorbox}
 }
 
-%  \setbeamertemplate{headline}{  
+%  \setbeamertemplate{headline}{
 %    \leavevmode
 %    \begin{beamercolorbox}[sep=0.5cm,wd=.8\paperwidth]{headline}
 %      \usebeamercolor{title in headline}{\raggedleft\color{fg}\textbf{\LARGE{\inserttitle}}\\[1ex]}
 %      \usebeamercolor{author in headline}{\raggedleft\color{fg}\large{\insertauthor}\\[1ex]}
-%      \usebeamercolor{institute in headline}{\raggedleft\color{fg}\large{\insertinstitute}\\[1ex]}     
+%      \usebeamercolor{institute in headline}{\raggedleft\color{fg}\large{\insertinstitute}\\[1ex]}
 %    \end{beamercolorbox}%
 %    \begin{beamercolorbox}[wd=.2\paperwidth]{logo in headline}
 %      \centering
 %      \LARGE{LOGO}
-%    \end{beamercolorbox}  
-
-
-%}
+%    \end{beamercolorbox}
+%  }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setbeamertemplate{footline}{
-  \begin{beamercolorbox}[wd=\paperwidth]{upper separation line foot}
-    \rule{0pt}{2pt}
-  \end{beamercolorbox}
-  
-  \leavevmode%
-  \begin{beamercolorbox}[ht=4ex,leftskip=1cm,rightskip=1cm]{author in head/foot}%
-    \texttt{\insertwebpage}
-    \hfill
-    \texttt{\insertmail}
-    \vskip1ex
-  \end{beamercolorbox}
-  \vskip0pt%
-  \begin{beamercolorbox}[wd=\paperwidth]{lower separation line foot}
-    \rule{0pt}{2pt}
-  \end{beamercolorbox}
+%  \begin{beamercolorbox}[wd=\paperwidth]{upper separation line foot}
+%    \rule{0pt}{2pt}
+%  \end{beamercolorbox}
+%
+%  \leavevmode%
+%  \begin{beamercolorbox}[ht=4ex,leftskip=1cm,rightskip=1cm]{author in head/foot}%
+%    \texttt{\insertwebpage}
+%    \hfill
+%    \texttt{\insertmail}
+%    \vskip1ex
+%  \end{beamercolorbox}
+%  \vskip0pt%
+%  \begin{beamercolorbox}[wd=\paperwidth]{lower separation line foot}
+%    \rule{0pt}{2pt}
+%  \end{beamercolorbox}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -229,7 +225,6 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mode<all>
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Local Variables: 
