pB: check results.

--- a/4-keyword-extraction/term_frequency.ipynb
+++ b/4-keyword-extraction/term_frequency.ipynb
@@ -44,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_terms = {k: v for k, v in tf.items() if v >= 100}"
@@ -78,7 +80,16 @@
     {
      "data": {
       "text/plain": [
-       "{'，': 175834,\n '朱立倫': 1700,\n '讓': 9938,\n '各': 3844,\n '位': 3336,\n '失望': 146,\n '了': 12066,\n '！': 19933,\n '我們': 15373,\n '國民黨': 4940,\n '努力': 1982,\n '不': 14692,\n '夠': 331,\n '選民': 766,\n '的': 106814,\n '期望': 133,\n '對': 4991,\n '國家': 2496,\n '責任': 629,\n '!': 1717,\n '。': 188015,\n '身為': 317,\n '黨主席': 217,\n '黨': 1489,\n '總統': 3076,\n '參選人': 1028,\n '要': 11187,\n '最': 4719,\n '大': 4447,\n '我': 17450,\n '徹底': 122,\n '自我': 173,\n '檢討': 221,\n '反省': 120,\n '但': 4048,\n '不會': 1296,\n '放棄': 339,\n '信心': 270,\n '社會': 2722,\n '蔡': 950,\n '英文': 676,\n '主席': 1673,\n '民進黨': 2550,\n '贏得': 146,\n '選舉': 2794,\n '這': 13369,\n '是': 29266,\n '台灣': 13731,\n '人民': 3876,\n '選擇': 859,\n '也': 11925,\n '、': 35444,\n '祝福': 380,\n '與': 10194,\n '能': 4629,\n '在': 21018,\n '勝選': 172,\n '之後': 837,\n '帶領': 273,\n '中華民國': 913,\n '走向': 243,\n '更': 5620,\n '幸福': 764,\n '美好': 421,\n '未來': 3405,\n '所有': 1474,\n '才': 2904,\n '朝野': 209,\n '政黨': 1965,\n '知道': 1686,\n '民意': 481,\n '會': 7219,\n '次': 3945,\n '大選': 928,\n '所': 2005,\n '嚴重': 346,\n '除了': 1101,\n '傾聽': 139,\n '選票': 1024,\n '訊息': 201,\n '外': 879,\n '必': 159,\n '當': 1705,\n '角色': 195,\n '監督': 733,\n '力量': 3050,\n '做為': 188,\n '政治': 4693,\n '上': 5903,\n '者': 2606,\n '反對': 561,\n '聲音': 484,\n '請': 4586,\n '大家': 6501,\n '做': 3308,\n '一切': 291,\n '發': 398,\n '愛': 914,\n '之': 3669,\n '心': 881,\n '只': 2441,\n '有': 15522,\n '一': 19450,\n '個': 13289,\n '選': 1203,\n '前': 3295,\n '這樣': 1789,\n '相信': 1015,\n '後': 3209,\n '時候': 957,\n '依': 331,\n 'P': 243,\n '理念': 597,\n '不同': 843,\n '價值': 856,\n '可以': 4352,\n '競爭': 201,\n '執政黨': 135,\n '政府': 3786,\n '尊重': 374,\n '民主': 2154,\n '機制': 243,\n '必須': 1113,\n '誠懇': 113,\n '執政': 863,\n '近': 447,\n '八': 475,\n '年': 5717,\n '再度': 191,\n '成為': 1742,\n '在野黨': 114,\n '？': 9375,\n '如果': 1898,\n '方向': 432,\n '那': 2083,\n '四': 1316,\n '沒有': 3814,\n '資格': 138,\n '說': 5286,\n ':': 14492,\n '再': 2467,\n '起': 845,\n '還': 4671,\n '機會': 1230,\n '支持': 5441,\n '民眾': 1709,\n '告訴': 585,\n '權利': 447,\n '從': 3041,\n '現在': 2118,\n '就': 8940,\n '開始': 1764,\n '認真': 410,\n '：': 15311,\n '為什麼': 836,\n '怎麼': 825,\n '往': 338,\n '哪裡': 288,\n '去': 2465,\n '過去': 1464,\n '幾': 1167,\n '那麼': 361,\n '政策': 2133,\n '主張': 775,\n '方式': 915,\n '溝通': 307,\n '連結': 451,\n '語言': 211,\n '和': 6068,\n '都': 9188,\n '出現': 355,\n '問題': 2711,\n '不能': 1309,\n '落實': 415,\n '失去': 207,\n '中央': 768,\n '國會': 4074,\n '多數': 235,\n '其實': 963,\n '九': 422,\n '地方': 1615,\n '已經': 1649,\n '面臨': 267,\n '危機': 182,\n '此': 1506,\n '時': 2403,\n '該': 1038,\n '最好': 444,\n '基層': 393,\n '培養': 114,\n '人才': 370,\n '透過': 989,\n '進入': 937,\n '『': 946,\n '』': 941,\n '唯一': 439,\n '出路': 180,\n '爭取': 800,\n '認同': 445,\n '不過': 553,\n '就是': 2669,\n '發展': 1703,\n '確實': 186,\n '跟': 3318,\n '一樣': 1029,\n '雖然': 868,\n '輸': 139,\n '然而': 313,\n '新': 4355,\n '表達': 429,\n '以及': 1341,\n '走': 726,\n '事': 1639,\n '而是': 620,\n '台灣人': 915,\n '共同': 1186,\n '做出': 196,\n '承諾': 524,\n '感恩': 139,\n '最後': 1608,\n '仍': 612,\n '離': 185,\n '朋友': 2887,\n '你們': 1273,\n '勇氣': 138,\n '對於': 1111,\n '始終': 181,\n '不斷': 505,\n '投票': 1621,\n '給': 2275,\n '繼續': 1436,\n '改革': 2294,\n '重新': 404,\n '動力': 144,\n '結束': 347,\n '今晚': 419,\n '以後': 260,\n '驕傲': 199,\n '很': 3977,\n '珍惜': 128,\n '參選': 901,\n '再次': 423,\n '感謝': 1746,\n '完成': 965,\n '則': 756,\n '贏': 293,\n '每': 3106,\n '張': 798,\n '中': 4775,\n '改變': 1857,\n '進': 458,\n '雨': 151,\n '看見': 446,\n '希望': 3117,\n '因為': 2699,\n '許多': 1466,\n '熱情': 785,\n '鄉親': 2178,\n '力挺': 255,\n '挺': 841,\n '勝利': 253,\n '@': 371,\n '北市': 922,\n '板橋': 352,\n '夜': 326,\n '【': 5976,\n '你': 5880,\n '】': 5974,\n '明天': 698,\n '需要': 2207,\n '投下': 247,\n '票': 1774,\n '捍衛': 392,\n '國旗': 270,\n '穿': 145,\n '帶': 739,\n '全': 2780,\n '世界': 1276,\n '著': 3025,\n '面': 208,\n '自由': 981,\n '進步': 757,\n '團結': 734,\n '合作': 727,\n '無論': 287,\n '投': 1413,\n '誰': 902,\n '您': 1856,\n '滿': 407,\n '地': 2815,\n '紅': 105,\n '(': 4580,\n ')': 4603,\n '出門': 200,\n '去年': 516,\n '底': 271,\n '來': 7633,\n '台': 1160,\n '旅遊': 186,\n '國際': 1251,\n '突破': 148,\n '人': 8227,\n '宜蘭': 260,\n '花蓮': 268,\n '好': 4701,\n '山': 138,\n '水': 409,\n '台東': 159,\n '熱': 106,\n '嘉年華': 103,\n '澎湖': 139,\n '吸引': 168,\n '重要': 1583,\n '維持': 328,\n '開放': 850,\n '和平': 514,\n '穩定': 266,\n '這些': 1930,\n '立委': 4395,\n '候選人': 2635,\n '一起': 4257,\n '-': 4618,\n '把': 2633,\n '陳': 323,\n '立法': 1390,\n '委員': 1961,\n '1月': 704,\n '16日': 352,\n '展現': 335,\n '；': 2975,\n '小': 2173,\n '阿嬤': 440,\n '消息': 197,\n '遺憾': 163,\n '等': 2959,\n '到': 4375,\n '日本': 527,\n '道歉': 281,\n '勇敢': 331,\n '帶來': 379,\n '傷害': 258,\n '如此': 473,\n '正': 810,\n '向': 2053,\n '賠償': 110,\n '段': 410,\n '歷史': 940,\n '被': 3689,\n '照片': 335,\n '自': 575,\n '歌': 169,\n 'FB': 107,\n '翻轉': 393,\n '南': 411,\n '安心': 293,\n '1': 2458,\n '/': 29039,\n '14': 419,\n '六': 1020,\n '點': 1881,\n '高雄': 1018,\n '懇請': 384,\n '站出來': 383,\n '夢': 248,\n '時代': 2171,\n '中心': 896,\n '旁': 232,\n '大道': 175,\n '鍾易仲': 102,\n '粉絲': 331,\n '頁': 211,\n '粉絲團': 253,\n ',': 1051,\n '光': 210,\n '如': 765,\n '或許': 252,\n '想': 1902,\n '公開': 602,\n '立場': 377,\n '遇到': 307,\n '掃街': 665,\n '拜票': 390,\n '只是': 560,\n '站': 1192,\n '默默': 118,\n '大眾': 227,\n '禮拜': 115,\n '為了': 1727,\n '下一代': 299,\n '絕對': 570,\n '16': 783,\n '務必': 198,\n '路': 942,\n '他們': 2591,\n '權益': 644,\n '進口': 146,\n '幫助': 407,\n '這裡': 614,\n '農': 160,\n '守護': 432,\n '現狀': 235,\n '雲林': 327,\n '嘉義': 534,\n '台南': 811,\n '片': 280,\n '土地': 1490,\n '《': 1524,\n '下': 2269,\n '願': 379,\n '力': 205,\n '》': 2279,\n '中國': 2864,\n '105': 425,\n '第二': 756,\n '選區': 1015,\n '黃': 162,\n '醫師': 604,\n '今天': 3423,\n '先生': 665,\n '28': 155,\n '桃園': 1169,\n '兩': 2453,\n '園區': 330,\n '十分': 157,\n '經濟': 1612,\n '建設': 697,\n '施政': 171,\n '作為': 624,\n '當年': 298,\n '蔣': 148,\n '將': 4980,\n '於': 1675,\n '以': 3690,\n '持續': 723,\n '奮鬥': 149,\n '雙手': 117,\n '打拚': 188,\n '手': 767,\n '牽': 112,\n '感到': 282,\n '特別': 1076,\n '一定': 1710,\n '出來': 588,\n '並': 2875,\n '過': 1840,\n '3': 1693,\n '天': 2881,\n '用': 2752,\n '提名': 336,\n '協助': 773,\n '中小企業': 172,\n '升級': 133,\n '休閒': 130,\n '觀光': 447,\n '產業': 1590,\n '行銷': 164,\n '傳統': 523,\n '農業': 615,\n '2014年': 153,\n '沒': 1676,\n '很多': 1370,\n '願意': 673,\n '月': 980,\n '?': 11329,\n '楊瓊瓔': 105,\n '加油': 1258,\n '讚': 305,\n '智慧': 287,\n '服務': 1570,\n '打拼': 334,\n '美': 423,\n '．': 416,\n '女兒': 163,\n '陪': 275,\n '市場': 934,\n '昨天': 524,\n '她': 1723,\n '買': 691,\n '條': 884,\n '回來': 198,\n '竟然': 297,\n '送': 432,\n '隻': 167,\n '喜歡': 315,\n '種': 1921,\n '感覺': 185,\n '教': 159,\n '孩子': 916,\n '不要': 1309,\n '他': 5022,\n '媽媽': 395,\n '心聲': 128,\n '換': 378,\n '敢': 450,\n '想法': 285,\n '索取': 116,\n '貼紙': 144,\n 'http': 6738,\n '鼓勵': 668,\n '業者': 193,\n '農會': 103,\n '角度': 143,\n '說出': 109,\n '環境': 1330,\n '謝謝': 991,\n '角落': 113,\n '認識': 570,\n '成就': 100,\n '核心': 168,\n '太陽': 258,\n '家園': 169,\n '高齡': 103,\n '百': 235,\n '歲': 841,\n '居住': 204,\n '像': 980,\n '或是': 413,\n '競選': 1603,\n '晚會': 360,\n '多': 2398,\n '一點': 416,\n '電話': 471,\n '非常': 1403,\n '家': 1172,\n '母親': 150,\n '融合': 109,\n '族群': 409,\n '長大': 114,\n '一路': 441,\n '辛苦': 444,\n '為': 6584,\n '家鄉': 214,\n '客家': 702,\n '科技': 327,\n '拚': 230,\n '成長': 364,\n '深耕': 126,\n '已': 1577,\n '久': 271,\n '新竹': 1294,\n '苗栗': 663,\n '鄭正鈐': 380,\n '網路': 795,\n '看到': 1635,\n '「': 19080,\n '」': 19068,\n '呢': 1088,\n '不應該': 114,\n '刻': 177,\n '2016年': 310,\n '台北': 1322,\n '街頭': 323,\n '走出': 154,\n '感受到': 209,\n '年代': 202,\n '事情': 867,\n '比': 1149,\n '包括': 686,\n '昨晚': 144,\n '台中': 1028,\n '唱': 134,\n '三': 2418,\n '首': 429,\n '出發': 334,\n '錯過': 139,\n '場': 1305,\n '政見': 934,\n '發表會': 176,\n '應該': 1427,\n '看看': 385,\n '全文': 365,\n '七': 444,\n '決定': 861,\n '空間': 475,\n '以來': 608,\n '提出': 1131,\n '正義': 892,\n '長照': 220,\n '托育': 120,\n '項': 946,\n '供': 153,\n '外界': 107,\n '比較': 391,\n '令': 499,\n '得': 1252,\n '可能': 1093,\n '錯誤': 204,\n '吧': 1209,\n '而': 3300,\n '民生': 167,\n '電視': 467,\n '發言': 158,\n '參加': 1083,\n '節目': 403,\n '廣播': 112,\n '專訪': 220,\n '聽': 521,\n '聊': 113,\n '電影': 362,\n '可愛': 238,\n '“': 151,\n '”': 192,\n '們': 2537,\n '提問': 201,\n '五': 1171,\n '擔任': 596,\n '新北': 226,\n '市長': 1207,\n '夥伴': 394,\n '地區': 767,\n '捷運': 365,\n '跨': 201,\n '縣市': 273,\n '快速': 144,\n '公車': 215,\n '醫療': 488,\n '資源': 765,\n '農產品': 175,\n '及': 4199,\n '聯合': 440,\n '一同': 505,\n '基隆': 318,\n '同': 522,\n '發揮': 222,\n '走到': 127,\n '歡迎': 1439,\n '親愛': 173,\n '家人': 312,\n '9': 592,\n '遊行': 459,\n '詳細': 135,\n '內容': 480,\n '創業': 246,\n '不再': 292,\n '青年': 1285,\n '年輕人': 1199,\n '美麗': 266,\n '安定': 172,\n '你我': 199,\n '出': 553,\n '份': 468,\n '總部': 1399,\n '地址': 152,\n '台北市': 750,\n '中山區': 116,\n '二段': 201,\n '號': 3423,\n '活動': 2558,\n '座': 359,\n '城市': 736,\n '更加': 299,\n '按': 250,\n '滿滿': 188,\n '笑容': 168,\n '充滿': 404,\n '能量': 174,\n '啦': 655,\n '精神': 564,\n '態度': 311,\n '困難': 273,\n '面對': 910,\n '解決': 849,\n '創意': 402,\n '+': 292,\n '行動': 697,\n '吃': 725,\n '路口': 216,\n '一下': 555,\n '真的': 1138,\n '下來': 132,\n '卻': 2054,\n '日': 1314,\n '國': 1373,\n '標準': 393,\n '美國': 606,\n '遠': 261,\n '10': 1333,\n '其他': 743,\n '國人': 198,\n '嗎': 2761,\n '合理': 249,\n '拼': 187,\n '生活': 1637,\n '看': 2329,\n '昨日': 114,\n '舉辦': 835,\n '有趣': 128,\n '造勢': 354,\n '電': 100,\n '夜市': 221,\n '即使': 216,\n '熱鬧': 124,\n '間': 441,\n '兩岸': 1220,\n '外交': 135,\n '能源': 184,\n '豬': 343,\n '找': 676,\n '淡水': 204,\n '上午': 535,\n '更多': 1465,\n '記憶': 142,\n '中華': 300,\n '年輕': 628,\n '曾': 664,\n '畢業': 138,\n '自己': 3961,\n '些': 360,\n '夢想': 334,\n '無法': 857,\n '實現': 340,\n '從政': 199,\n '推動': 1589,\n '選手': 217,\n '股': 143,\n '忘': 220,\n '初衷': 146,\n '辯論': 405,\n '結論': 115,\n '影片': 745,\n 'https': 3506,\n 'www.youtube.com/watch': 364,\n '_': 1588,\n '0': 137,\n '日子': 289,\n '工作': 1440,\n '在一起': 291,\n '務實': 123,\n '經驗': 553,\n '能力': 511,\n '領導': 187,\n '只有': 756,\n '找回': 273,\n '溫暖': 404,\n '自信': 122,\n '剩下': 209,\n '到底': 534,\n '什麼': 2006,\n '否則': 146,\n '……': 196,\n '寶島': 214,\n '波': 152,\n '代表': 1152,\n '不只': 547,\n '音樂': 411,\n '世代': 671,\n '生命': 326,\n '擁有': 386,\n '臺灣': 975,\n '但是': 1326,\n '開心': 279,\n '冷': 180,\n '一些': 443,\n '祝': 175,\n '新年': 205,\n '快樂': 432,\n 'by': 129,\n '小編': 578,\n '元旦': 114,\n '人員': 582,\n '曾經': 364,\n '長期': 707,\n '用心': 219,\n '常常': 281,\n '媒體': 871,\n '暴力': 163,\n '受到': 388,\n '日前': 220,\n '周': 245,\n '基金會': 372,\n '醫院': 301,\n '院長': 272,\n '前來': 224,\n '拜訪': 196,\n '全面': 418,\n '制度': 706,\n '大力': 171,\n '專業': 724,\n '照護': 159,\n '家屬': 132,\n '打造': 456,\n '體系': 205,\n '形象': 111,\n '提供': 1012,\n '增加': 498,\n '負擔': 211,\n '同時': 738,\n '照顧': 966,\n '來到': 610,\n '平安': 296,\n '健康': 786,\n '永遠': 359,\n '別': 465,\n '聲': 169,\n '分享': 1119,\n '2016': 1652,\n '公共': 529,\n '學生': 804,\n '輔導': 148,\n '現場': 1084,\n '弱勢': 502,\n '設計': 449,\n '行程': 479,\n '聽到': 278,\n '言論': 220,\n '所以': 1461,\n '感受': 252,\n '化': 419,\n '差距': 163,\n '證明': 256,\n '有效': 172,\n '爸爸': 218,\n '道': 209,\n '早安': 281,\n '見': 461,\n '第一': 2057,\n '名': 950,\n '成績': 116,\n '員工': 169,\n '企業': 647,\n '回': 460,\n '投資': 398,\n '轉': 133,\n '新聞': 1182,\n '件': 676,\n '警察': 273,\n '不論': 327,\n '依據': 146,\n '規範': 132,\n '認定': 109,\n '判決': 290,\n '桃園市': 310,\n '司法': 672,\n '犯罪': 104,\n '同仁': 250,\n '正確': 182,\n '使用': 552,\n '毫無': 113,\n '堅定': 313,\n '保護': 533,\n '國中': 223,\n '老師': 657,\n '後來': 281,\n '主動': 164,\n '40': 187,\n '潘': 242,\n '身心': 162,\n '障礙': 244,\n '還是': 1293,\n '愛心': 154,\n '關懷': 301,\n '真': 459,\n '總': 464,\n '部落': 621,\n '族人': 199,\n '原住民族': 404,\n '辯論會': 166,\n '低': 353,\n '風雨': 108,\n '關心': 941,\n '具體': 243,\n '少數': 223,\n '不實': 110,\n '評論': 130,\n '基本': 500,\n '工資': 199,\n '議題': 1019,\n '帶動': 161,\n '當選': 664,\n '內': 995,\n '提高': 198,\n '至': 991,\n '元': 1386,\n '就業': 319,\n '薪資': 271,\n '困境': 274,\n '成立': 1144,\n '大學': 769,\n '通過': 515,\n '保證': 180,\n '平均': 215,\n '強化': 136,\n '教育': 1134,\n '措施': 218,\n '管': 240,\n '提升': 387,\n '全民': 491,\n '水準': 109,\n '◎': 147,\n '是否': 632,\n '對手': 289,\n '清楚': 443,\n '回應': 302,\n '調整': 203,\n '加': 275,\n '蔡英文': 1977,\n '質疑': 353,\n '可惜': 119,\n '迴避': 106,\n '下午': 996,\n '期待': 873,\n '值得': 272,\n '學習': 352,\n '記錄': 128,\n '創新': 316,\n '轉型': 319,\n '辦公室': 297,\n '講座': 143,\n '舞台': 169,\n '王如玄': 803,\n '主委': 339,\n '關注': 331,\n '婦女': 199,\n '勞工': 1185,\n '身': 328,\n '王': 276,\n '律師': 839,\n '法令': 133,\n '受': 588,\n '家庭': 547,\n '過程': 594,\n '數': 140,\n '度': 262,\n '播': 602,\n '無': 839,\n '甚至': 814,\n '花': 637,\n '文化': 1903,\n '結合': 341,\n '連': 839,\n '或': 2157,\n '因': 615,\n '人口': 282,\n '傳承': 199,\n '不少': 210,\n '保存': 119,\n '革新': 248,\n '整合': 441,\n '校': 103,\n '特色': 256,\n '擴大': 200,\n '文創': 102,\n '不僅': 433,\n '包容': 161,\n '…': 597,\n '抗議': 417,\n '志工': 765,\n '喊': 191,\n '打': 708,\n '然後': 304,\n '臉': 565,\n '老闆': 187,\n '太多': 201,\n '救': 177,\n '來自': 519,\n '裡': 1160,\n '長輩': 432,\n '樣': 169,\n '#': 7315,\n '協會': 468,\n '所有人': 106,\n '陪伴': 148,\n '身邊': 134,\n '.': 4152,\n '助理': 146,\n '進行': 1223,\n '微笑': 123,\n '賣': 274,\n '南投': 111,\n '積極': 521,\n '推廣': 208,\n '美食': 186,\n '當地': 201,\n '縣': 139,\n '替': 370,\n '最佳': 194,\n '記得': 526,\n '沒想到': 104,\n '竟': 182,\n '坐': 166,\n '相': 379,\n '感動': 438,\n '國民': 348,\n '運動': 1262,\n '有機': 118,\n '獲得': 500,\n '市民': 1076,\n '肯定': 348,\n '大會': 559,\n '動物': 362,\n '執行長': 164,\n '處理': 602,\n '狗': 102,\n '零': 128,\n '建議': 311,\n '主任': 180,\n '新莊': 462,\n '開發': 257,\n '協調': 194,\n '總是': 333,\n ...}"
+       "{'了': 12066,\n",
+       " '位': 3336,\n",
+       " '各': 3844,\n",
+       " '國民黨': 4940,\n",
+       " '失望': 146,\n",
+       " '我們': 15373,\n",
+       " '朱立倫': 1700,\n",
+       " '讓': 9938,\n",
+       " '！': 19933,\n",
+       " '，': 175834}"
       ]
      },
      "execution_count": 5,
@@ -87,13 +98,15 @@
     }
    ],
    "source": [
-    "top_terms"
+    "{k: top_terms[k] for k in list(top_terms)[:10]}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -104,30 +117,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
