pB: running topic analysis.

--- a/4-keyword-extraction/time_series.ipynb
+++ b/4-keyword-extraction/time_series.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -34,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_terms = {k: {} for k in top_terms}"
@@ -43,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from models import *\n",
@@ -68,6 +74,25 @@
    },
    "outputs": [],
    "source": [
+    "from collections import Counter\n",
+    "times = []\n",
+    "for post in Post.select():\n",
+    "    if post.message:\n",
+    "        times.append(post.time[0:10])\n",
+    "time_counts = Counter(times)\n",
+    "for word in top_terms:\n",
+    "    for time in top_terms[word]:\n",
+    "        top_terms[word][time] /= time_counts[time]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from datetime import datetime\n",
     "import pandas as pd\n",
     "start = datetime(2015, 10, 17)\n",
@@ -77,140 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "， 朱立倫 讓 各 位 了 ！ 我們 國民黨 不 的 。 總統 要 最 我 但 不會 英文 民進黨 選舉 這 是 台灣 也 、 在 更 未來 所有 政黨 知道 會 次 大選 選票 監督 政治 反對 請 大家 發 愛 只 有 一 個 選 前 這樣 P "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "價值 民主 誠懇 ？ 說 再 還 機會 支持 告訴 從 現在 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "就 和 都 時 跟 一樣 新 走 而是 台灣人 離 朋友 投票 給 今晚 很 再次 張 因為 熱情 鄉親 力挺 勝利 夜 【 你 】 需要 國旗 全 進步 投 誰 您 滿 地 來 國際 人 好 立委 候選人 一起 委員 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1月 16日 ； 消息 到 傷害 向 賠償 翻轉 站出來 中心 想 公開 掃街 大眾 為了 絕對 16 路 現狀 《 力 中國 選區 黃 28 一定 過 天 用 願意 楊瓊瓔 陪 不要 認識 像 一路 為 家鄉 三 決定 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "以來 吧 們 公車 同 年輕人 啦 困難 面對 真的 嗎 造勢 能源 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "自己 實現 辯論 在一起 只有 冷 元旦 前來 現場 第一 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "堅定 保護 辯論會 當選 值得 抗議 太多 # 身邊 進行 南投 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "找到 分區 第四 典禮 從來 31 生產 週 踴躍"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 網址 倒數 憲政 報告 有的 等待 人選 交流 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "登記 頂 新竹市 人物 何 新加坡 選戰 小時 恐怖 證所稅 年金 覺得 OneTaiwan 26 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "費用 預計 團體 簽署 互相 前進 取消 瑞芳 後盾 屬於 6 食品 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "意志 衝 承擔 中國人 政黨票 拜託 衝刺 文宣 不用 票投 表演 黃安 一生 馬習會 憤怒 表 馬 13 通通 黑箱 拍"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 即可 作 哩 食安 千 短 柯 行 關 陳建仁 抹黑 11月"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 名單 拉 靠 10月 廠 較 而已 現任 中正 口 舊 一月 過半 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "對抗 投票日 工人 出力 馬習 屬 把握 聲明 馬英九 會面 提 習近平 協議 見面 程序 停止 安排 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "還可以 鬥陣 陳奕齊 教訓 命運 叫做 舉行 聖誕 罵 故宮 南院 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "方便 前往 陣營 ② 車隊 接著 不公 交換 民主進步黨 倒 包"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 沃草 黨部 護航 頂新 直播 藝人 購 台獨 破壞 地位 點亮 ① 眷村 黑心 軍宅 娘家 買賣 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "板橋區 116 致政 瓊瓔 "
+      "朱立倫 總統 選票 監督 反對 選 不斷 投票 夜 票 國際 穩定 1月 16日 消息 傷害 賠償 南 1 14 懇請 公開 現狀 下 中國 28 施政 一定 天 不要 競選 公車 困難 標準 能源 辯論 自信 開心 冷 元旦 堅定 關懷 部落 辯論會 抗議 進行 非 技術 31 生產 22 倒數 憲政 報告 即將 人選 交流 深刻 登記 頂 人物 經營 何 新加坡 恐怖 證所稅 年金 預計 團體 簽署 多少 取消 領導人 食品 衝 尊嚴 政黨票 拜託 黃安 選情 馬習會 表 馬 黑箱 食安 二十 柯 關 陳建仁 抹黑 11月 等於 廠 投給 過半 工人 出力 馬習 屬 聲明 馬英九 會面 習近平 協議 見面 停止 安排 握 鬥陣 叫做 舉行 聖誕 故宮 南院 前往 KMT 資產 陣營 ② 交換 頂新 藝人 知 購 破壞 地位 ① 黑心 軍宅 無罪 板橋區 116 "
      ]
     }
    ],
@@ -221,7 +120,7 @@
     "    s = pd.Series(top_terms[k])\n",
     "    s.index = pd.DatetimeIndex(s.index)\n",
     "    s = s.reindex(index, fill_value=0)\n",
-    "    peak = s[s > s.mean() + 2 * s.std()]\n",
+    "    peak = s[s > (s.mean() + 2 * s.std())]\n",
     "    for d1 in peak.index:\n",
     "        d2 = d1 + one_day\n",
     "        d3 = d2 + one_day\n",
@@ -233,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "331"
+       "132"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,16 +152,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from matplotlib import pyplot\n",
-    "for k, v in top_terms_with_peak.items():\n",
-    "    pass\n",
-    "    # v.plot()\n",
-    "    # pyplot.show()\n",
-    "    # print(k)"
+    "meaningful = {'KMT', '①', '②', '中國', '交換', '交流', '人物', '人選', '倒數', '停止', '傷害', '冷', '出力',\n",
+    " '前往', '協議', '南院', '即將', '反對', '取消', '叫做', '困難', '國際', '團體', '地位', '堅定', '報告', '夜', '安排',\n",
+    " '尊嚴', '屬', '工人', '年金', '廠', '恐怖', '憲政', '懇請', '技術', '投票', '投給', '抗議', '抹黑', '拜託', '握',\n",
+    " '政黨票', '故宮', '新加坡', '會面', '朱立倫', '標準', '消息', '無罪', '現狀', '登記', '監督', '破壞', '票', '穩定',\n",
+    " '簽署', '經營', '總統', '習近平', '聲明', '能源', '自信', '舉行', '藝人', '衝', '表', '見面', '證所稅', '賠償', '購',\n",
+    " '軍宅', '辯論', '辯論會', '進行', '過半', '選票', '部落', '關', '陳建仁', '頂', '頂新', '領導人', '食品', '食安', '馬',\n",
+    " '馬習', '馬習會', '馬英九', '鬥陣', '黃安', '黑心', '黑箱'}\n",
+    "len(meaningful)"
    ]
   },
   {
@@ -270,28 +182,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from matplotlib import pyplot\n",
+    "group = {}\n",
+    "for k, v in top_terms_with_peak.items():\n",
+    "    if k in meaningful:\n",
+    "        v.plot()\n",
+    "        pyplot.show()\n",
+    "        option = ''\n",
+    "        while not option.isdecimal():\n",
+    "            option = input(k + ' ')\n",
+    "        group[k] = int(option)\n",
+    "        print(group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
